# ffsds4

./: .gitignore  .project  .pydevproject  Pipfile  README.md  pyproject.toml  start.py  test.py
.github/workflows/: ci.yml
ffsds4/: __init__.py  console.py  ds4.py  sequencer.py
ffsds4lib/: __init__.py  console.py  ds4.py  sequencer.py
