[tool.poetry]
name = "ffsds4"
version = "0.1.0"
description = "PS4 licensed controller function"
authors = ["dogtopus <dogtopus@users.noreply.github.com>"]
license = "GPL-3.0-or-later"
readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.11,<3.13"
functionfs = "^0.9.2"
pycryptodomex = "^3.21.0"
sty = "^1.0.6"
yappi = "^1.6.9"


[tool.poetry.group.dev.dependencies]
pylint = "^3.3.1"
rope = "^1.13.0"
pyinstaller = "^6.11.0"
mypy = "^1.13.0"
tuna = "^0.5.11"
snakeviz = "^2.2.2"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
